deployment/flux-kustomizer/test-env/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-env-ghostblog
  namespace: test-env-ghostblog
  labels:
    app: test-env-ghostblog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-env-ghostblog
  template:
    metadata:
      labels:
        app: test-env-ghostblog
    spec:
      containers:
      - name: test-env-ghostblog
        image: 658951324167.dkr.ecr.eu-west-1.amazonaws.com/gitops-in-action-gblog-proj:v0.3
        imagePullPolicy: Always
        ports:
        - containerPort: 2368
