deployment/flux-kustomizer/test-env/test-env-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-env-ingress
  namespace: test-env-ghostblog
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "test-env.aws.mycloudlearning.uk"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test-env-ghostblog
            port:
              number: 80
